add_executable(question_9_1 question_1.cpp)
add_executable(question_9_2 question_2.cpp)
add_executable(question_3_stack question_3_stack.cpp)
add_executable(question_3_queue question_3_queue.cpp)
add_executable(question_3_stack_own  question_3_stack_own.cpp)
add_executable(question_3_queue_own question_3_queue_own.cpp)
add_executable(question_4 question_4.cpp)
