add_executable(program_4 program_4.cpp)
add_executable(program_6 program_6.cpp)
add_executable(program_7 program_7.cpp)
add_executable(problem_10 problem_10.cpp)
add_executable(problem_13 problem_13.cpp)
add_executable(program_18 program_18.cpp)
add_executable(problem_20 problem_20.cpp)
add_executable(problem_25 program_25.cpp)
add_executable(problem_28 program_28.cpp)
add_executable(program_40 program_40.cpp)